Add persistent volume claim to mongodb

--- a/infra/k8s/mongo-depl.yaml
+++ b/infra/k8s/mongo-depl.yaml
@@ -13,10 +13,17 @@ spec:
       labels:
         app: mongo
     spec:
-        containers:
-          - name: mongo
-            image: mongo
-
+      containers:
+        - name: mongo
+          image: mongo
+          volumeMounts:
+            - name: mongo-storage
+              mountPath: /data/db
+      volumes:
+        - name: mongo-storage
+          persistentVolumeClaim:
+            claimName: mongo-pvc
+              
 ---
 
 apiVersion: v1
