--- a/infra/k8s/server-depl.yaml
+++ b/infra/k8s/server-depl.yaml
@@ -15,7 +15,15 @@ spec:
     spec:
       containers:
         - name: server
-          image: laithharb/server:v1
+          image: laithharb/server:v2
+          env:
+            - name: MONGO_URL 
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-credentials
+                  key: mongo-url
+            # name: MONGO_URL
+            # value: mongodb://mongo-srv/habits
 
 ---
 
