Added requests to server container and requests & limits to mongo container

--- a/infra/k8s/server-depl.yaml
+++ b/infra/k8s/server-depl.yaml
@@ -16,6 +16,10 @@ spec:
       containers:
         - name: server
           image: laithharb/server:v2
+          resources:
+            requests:
+              memory: 200Mi
+              cpu: 100m
           env:
             - name: MONGO_URL 
               valueFrom:
